samples/_failures_safe/1761257550_dc7df8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_94d7478e.c: In function ‘main’:
./samples/SAFE/__tmp_94d7478e.c:151:5: error: expected declaration or statement at end of input
  151 |     }
      |     ^
